--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -100,6 +100,7 @@
         <string>Copyright © 2009-2014 The Bitcoin developers
 Copyright © 2012-2014 The NovaCoin developers
 Copyright © 2014-2016 The Blackcoin developers
+Copyright © 2014-2015 The Stratis developers
 Copyright © 2016-2017 The HShare developers</string>
        </property>
        <property name="textInteractionFlags">
